Setting padding botton to avoid footer overlapping

--- a/bio.css
+++ b/bio.css
@@ -13,6 +13,7 @@ h1, h2 {
     margin: 0 auto;
     width: 840px;
     padding: 40px 0;
+    padding-bottom: 80px;
 }
 
 main h1 {
